Minor cde enhancements without changing behavior.